--- a/ElementalClash2022/.vscode/settings.json
+++ b/ElementalClash2022/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "ElementalClash.sln"
+    "dotnet.defaultSolution": "ElementalClash2022.sln"
 }
